fix: add disable option to empty button

--- a/app/screens/widgets/emptybutton.kv
+++ b/app/screens/widgets/emptybutton.kv
@@ -7,9 +7,9 @@
     color: (.2, .64, .81, 1)
     size_hint_y: None
     height: 40
-    canvas.before:
+    canvas.after:
         Color:
-            rgba: (.2, .64, .81, 1)
+            rgba: (.2, .64, .81, 1) if not self.disabled else (.3, .3, .3, 1)
         Line:
-            rounded_rectangle: (self.pos[0],self.pos[1],self.size[0],self.size[1], 4)
-            width: 2
+            rounded_rectangle: (self.pos[0] ,self.pos[1]+2 ,self.size[0],self.size[1]-2, 4)
+            width: 1.3
