feat: add functionality to btn_add on manage_prices_screen

--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -365,7 +365,7 @@
             EmptyButton:
                 id: btn_add
                 text: "Add"
-                on_press: root.btn_add_on_press()
+                on_release: root.btn_add_on_press()
             # Delete
             EmptyButton:
                 id: btn_delete
