feat: add MessageBox to confirm products deletion

--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -370,12 +370,12 @@
             EmptyButton:
                 id: btn_delete
                 text: "Delete"
-                on_press: root.btn_delete_on_press()
+                on_release: root.btn_delete_on_press()
             # Replace
             EmptyButton:
                 id: btn_replace
                 text: "Replace"
-                on_press: root.btn_replace_on_press()
+                on_release: root.btn_replace_on_press()
             # Compare
             EmptyButton:
                 id: btn_compare
