feat: create settings screen

--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -60,6 +60,7 @@
                 id: btn_settings
                 text: "Settings"
                 icon: './assets/icons/settings_1.png'
+                screen_name: "settings"
                 on_press: root.change_category(self)
             Label:
                 id: spc_categories
@@ -114,3 +115,5 @@
                     name: "buy"
                 ManagePrices:
                     name: "manage"
+                SettingsScreen:
+                    name: "settings"
