--- a/app/screens/widgets/widgets_styles.kv
+++ b/app/screens/widgets/widgets_styles.kv
@@ -5,6 +5,7 @@
     background_normal: ''
     background_active: ''
     foreground_color: (1, 1, 1, 1)
+    disabled_foreground_color:  (0.6, 0.6, 0.6, 1)
     cursor_color: (1, 1, 1, 1)
     multiline: False
     write_tab: False
