--- a/app/screens/settings_screen.kv
+++ b/app/screens/settings_screen.kv
@@ -25,7 +25,7 @@
     height: dp(30)
     canvas.before:
         Color:
-            rgba: (.2, .64, .81, 1)#(.49, .77, .87, 1)
+            rgba: (.2, .64, .81, 1)
         Rectangle:
             size: self.size
             pos: self.pos
@@ -36,11 +36,16 @@
     ScrollView:
         do_scroll_x: False
         do_scroll_y: True
+        bar_color: (1, 1, 1, .3)
+        bar_width: dp(15)
+        scroll_type: ['bars']
+        scroll_wheel_distance: 0
         BoxLayout:
             orientation: 'vertical'
             size_hint_y: None
             height: self.minimum_height
             spacing: dp(20)
+            padding: 0, 0, self.parent.bar_width, 0
             # Fractions
             BoxLayout:
                 orientation: 'vertical'
@@ -50,9 +55,9 @@
                 Title:
                     text: "Fractions"
                 Table:
-                    id: tbl_data
-                    hint_sizes: [0.15, 0.25, 1, 0.5, 0.5, 0.5, 0.5]
-                    header: ["id", "Alias", "Description", "Unit", "Fraction 1", "Fraction 2", "Fraction 3"]
+                    id: tbl_fractions
+                    hint_sizes: [0.15, 0.3, 1, 0.5, 0.4, 0.4, 0.4]
+                    header: ["id", "Name", "Description", "Unit", "Fraction 1", "Fraction 2", "Fraction 3"]
                     items: root.get_fractions_items()
                     on_selected_row: root.on_selected_row(lyt_form_fractions, self.items[self.selected_row])
                 # Form
@@ -65,34 +70,34 @@
                     spacing: dp(10)
                     TextField:
                         size_hint_x: None
-                        width: dp(30)
+                        width: dp(40)
                         TextInput:
                             id: txt_id
                             hint_text: "id"
                             disabled: True
                     TextField:
-                        size_hint_x: 0.25
+                        size_hint_x: 0.3
                         TextInput:
                             id: txt_alias
-                            hint_text: "Alias"
+                            hint_text: "Name"
                     TextField:
                         size_hint_x: 1
                         TextInput:
                             id: txt_description
                             hint_text: "Description"
                     TextField:
-                        size_hint_x: 0.5
+                        size_hint_x: 0.4
                         TextInput:
                             id: txt_unit
                             hint_text: "Unit"
                     TextField:
-                        size_hint_x: 0.5
+                        size_hint_x: 0.4
                         TextInput:
                             id: txt_fraction_1
                             hint_text: "Fraction 1"
                             input_filter: 'float'
                     TextField:
-                        size_hint_x: 0.5
+                        size_hint_x: 0.4
                         TextInput:
                             id: txt_fraction_2
                             hint_text: "Fraction 2"
@@ -105,10 +110,10 @@
                             input_filter: 'float'
                     IconButton_:
                         source: './assets/icons/save-disk_c.png'
-                        # on_press:
+                        on_press: root.btn_save_fraction(lyt_form_fractions)
                     IconButton_:
                         source: './assets/icons/big-plus_c.png'
-                        # on_press:
+                        on_press: root.btn_add_fraction(lyt_form_fractions)
                     IconButton_:
                         source: './assets/icons/big-cross_c.png'
                         on_press: root.clear_form(lyt_form_fractions)
@@ -121,7 +126,7 @@
                 Title:
                     text: "Suppliers"
                 Table:
-                    id: tbl_data
+                    id: tbl_suppliers
                     hint_sizes: [0.2, 1, 1, 0.8, 0.8]
                     header: ["id", "Name", "Phone", "Email", "Address"]
                     items: root.get_suppliers_items()
@@ -136,7 +141,7 @@
                     spacing: dp(10)
                     TextField:
                         size_hint_x: None
-                        width: dp(30)
+                        width: dp(40)
                         TextInput:
                             id: txt_id
                             hint_text: "id"
@@ -163,10 +168,10 @@
                             hint_text: "Address"
                     IconButton_:
                         source: './assets/icons/save-disk_c.png'
-                        # on_press:
+                        on_press: root.btn_save_supplier(lyt_form_suppliers)
                     IconButton_:
                         source: './assets/icons/big-plus_c.png'
-                        # on_press:
+                        on_press: root.btn_add_supplier(lyt_form_suppliers)
                     IconButton_:
                         source: './assets/icons/big-cross_c.png'
                         on_press: root.clear_form(lyt_form_suppliers)
@@ -179,7 +184,7 @@
                 Title:
                     text: "Sections"
                 Table:
-                    id: tbl_data
+                    id: tbl_sections
                     hint_sizes: [0.1, 1]
                     header: ["id", "Name"]
                     items: root.get_sections_items()
@@ -194,7 +199,7 @@
                     spacing: dp(10)
                     TextField:
                         size_hint_x: None
-                        width: dp(30)
+                        width: dp(40)
                         TextInput:
                             id: txt_id
                             hint_text: "id"
@@ -206,10 +211,10 @@
                             hint_text: "Name"
                     IconButton_:
                         source: './assets/icons/save-disk_c.png'
-                        # on_press:
+                        on_press: root.btn_save_section(lyt_form_sections)
                     IconButton_:
                         source: './assets/icons/big-plus_c.png'
-                        # on_press:
+                        on_press: root.btn_add_section(lyt_form_sections)
                     IconButton_:
                         source: './assets/icons/big-cross_c.png'
                         on_press: root.clear_form(lyt_form_sections)
@@ -228,7 +233,7 @@
                     Title:
                         text: "IVA"
                     Table:
-                        id: tbl_data
+                        id: tbl_iva
                         header: ["IVA"]
                         items: root.get_iva_items()
                         on_selected_row: root.on_selected_row(lyt_form_iva, self.items[self.selected_row])
@@ -247,10 +252,10 @@
                                 input_filter: 'float'
                         IconButton_:
                             source: './assets/icons/save-disk_c.png'
-                            # on_press:
+                            on_press: root.btn_save_iva(tbl_iva.selected_row, float(txt_iva.text))
                         IconButton_:
                             source: './assets/icons/big-plus_c.png'
-                            # on_press:
+                            on_press: root.btn_add_iva(float(txt_iva.text))
                         IconButton_:
                             source: './assets/icons/big-cross_c.png'
                             on_press: root.clear_form(lyt_form_iva)
@@ -264,7 +269,7 @@
                     Title:
                         text: "Dollar"
                     Table:
-                        id: tbl_data
+                        id: tbl_dollar
                         header: ["Dollar"]
                         items: root.get_dollar_items()
                         on_selected_row: root.on_selected_row(lyt_form_dollar, self.items[self.selected_row])
@@ -283,10 +288,10 @@
                                 input_filter: 'float'
                         IconButton_:
                             source: './assets/icons/save-disk_c.png'
-                            # on_press:
+                            on_press: root.btn_save_dollar(tbl_dollar.selected_row - 1, float(txt_dollar.text))
                         IconButton_:
                             source: './assets/icons/big-plus_c.png'
-                            # on_press:
+                            on_press: root.btn_add_dollar(float(txt_dollar.text))
                         IconButton_:
                             source: './assets/icons/big-cross_c.png'
                             on_press: root.clear_form(lyt_form_dollar)
